@@ -12,7 +12,7 @@
 #-----------------------------------------------------------------------------------------------------------
 
 # \u65e5\u5fd7\u683c\u5f0f
-java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
+#java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
 
 #\u6307\u5b9aRoot Logger\u7ea7\u522b
 .level= ALL
